--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,37 @@
 body {
     background-color: rgb(41, 122, 41);
+    margin: 0%;
 }
 h1 {
+    position:relative;
+    font-size: 300%;
     text-align: center;
+    margin: 0%;
+    top: 50px;
+}
+
+.relative {
+    position: relative;
+    z-index: 2;
 }
 .container {
     position: relative;
-    margin: 20% 20%;
+    margin: 5% 20%;
     height: auto;
     width: auto;
     text-align: center;
+    top: 400px;
 
 }
 
 .balls {
     border-radius: 50%;
     border: 2px solid black;
-    height: 100px;
-    width: 100px;
+    height: 75px;
+    width: 75px;
     display: inline-block;
-    margin:auto;
+    margin: auto;
+    text-align: center;
 }
 
 #red-ball {
@@ -51,3 +63,14 @@ h1 {
 
 }
 
+img {
+    position: absolute;
+    z-index: -1;
+    object-fit: fill;
+    width: 100%;
+}
+
+.ball-count {
+    border-radius: 50%;
+    margin: auto;
+}
