--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body{
     margin:0%;
+    min-height: 100%;
     box-sizing: border-box;
 }
 
@@ -21,7 +22,7 @@ h1 {
 }
 
 .container {
-    margin:5% 20%;
+    margin:4% 20%;
     right:0%;
     left:0%;
     text-align: center;
@@ -78,7 +79,9 @@ img {
     object-fit: fill;
     width: 100%;
     height:100%;
+    max-height: 100%;
     top: 0%
+
 }
 
 .ball-count {
@@ -94,6 +97,7 @@ img {
     text-align:center;
     vertical-align:top;     
     box-sizing: border-box;
+    font-size:25px;
 }
 
 #player-1{
