--- a/styles.css
+++ b/styles.css
@@ -103,11 +103,19 @@ img {
 #player-1{
     left:0px;
     margin-left: 0%;
-    margin-right:25%;
+    margin-right:20%;
 }
 
 #player-2{
     right:0%;
     margin-right:0%; 
-    margin-left:25%;
+    margin-left:20%;
 }   
+
+#currentPlayer {
+    font-style: normal;
+}
+
+button {
+    vertical-align: bottom;
+}
