--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ h1 {
 }
 
 .container {
-    margin:4% 20%;
+    margin:4% 15%;
     right:0%;
     left:0%;
     text-align: center;
@@ -41,6 +41,7 @@ h1 {
     margin:auto;
     text-align: center;
     vertical-align:top;
+    cursor: pointer;
 }
 
 #red {
@@ -126,6 +127,7 @@ img {
     display:inline-block;
     vertical-align: middle; 
     background-color:rgb(110, 187, 143);
+    cursor: pointer;
 }
 
 .fouls-container {
@@ -143,6 +145,7 @@ img {
 .info {
     position: relative;
     height: fit-content;
-    margin-left: 20%;
-    margin-right: 20%;
+    width: 400px;
+    margin-left: 15%;
+    margin-right: 15%;
 }
