--- a/styles.css
+++ b/styles.css
@@ -46,11 +46,16 @@ h1 {
 
 #red {
     background-color: rgb(179, 15, 15);
-    box-sizing: border-box;
+    font-style: bold;
+    font-size:20px;
+    line-height:75px;
+    height: 75px;
+    
+    
 }
 
 #yellow {
-    background-color: rgb(243, 243, 78);
+    background-color: rgb(255, 230, 0);
 }
 
 #green {
@@ -74,6 +79,12 @@ h1 {
 
 }
 
+#free {
+    background-color: whitesmoke;
+    font-style: bold;
+    font-size: 20px
+}
+
 img {
     position: absolute;
     z-index: -1;
@@ -81,8 +92,8 @@ img {
     width: 100%;
     height:100%;
     max-height: 100%;
-    top: 0%
-
+    top: 0%;
+    opacity: 0.9;
 }
 
 .ball-count {
@@ -113,6 +124,8 @@ img {
 
 #currentPlayer {
     font-style: bold;
+    color:rgb(255, 255, 255);
+    font-size: 400%;
     
 }
 
@@ -149,4 +162,7 @@ img {
     width: 400px;
     margin-left: 15%;
     margin-right: 15%;
+}
+.playerTitle {
+    margin-top: 0%;
 }
